<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.ur.mi.android.dailybuddy.MainActivity">

    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/kalenderansicht_abrufen"
        android:orderInCategory="100"
        android:title="@string/kalenderansicht_abrufen"
        app:showAsAction="never" />
    <item
        android:id="@+id/notizfunktion_aufrufen"
        android:orderInCategory="100"
        android:title="@string/notizfunktion_aufrufen"
        app:showAsAction="never" />
    <item
        android:id="@+id/wetterinformationen_abrufen"
        android:orderInCategory="100"
        android:title="@string/wetterinformationen_abrufen"
        app:showAsAction="never" />
    <item
        android:id="@+id/rechnerfunktion_aufrufen"
        android:orderInCategory="100"
        android:title="@string/rechnerfunktion_aufrufen"
        app:showAsAction="never" />
    <item
        android:id="@+id/stopwatch"
        android:orderInCategory="100"
        android:title="@string/stoppuhr_aufrufen"
        app:showAsAction="never" />


</menu>
