<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"

        android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/output"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:layout_weight="1"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/ic_backspace_black_24dp"
            android:id="@+id/backButton"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.15">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:text="x²"
        android:textSize="30sp"
        android:background="@drawable/rounded_corners_button"
        android:layout_margin="1dp"
        android:id="@+id/squareButton"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:text="\u221A"
        android:textSize="30sp"
        android:background="@drawable/rounded_corners_button"
        android:layout_margin="1dp"
        android:id="@+id/rootButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:text="%"
        android:textSize="30sp"
        android:background="@drawable/rounded_corners_button"
        android:layout_margin="1dp"
        android:id="@+id/percentButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:text="@string/dividedButton"
        android:textSize="30sp"
        android:id="@+id/button_divided"
        android:background="@drawable/rounded_corners_button"
        android:layout_margin="1dp"

        />


    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.15">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/seven"
            android:id="@+id/button_7"
            android:textSize="30sp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_margin="1dp"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/eight"
            android:id="@+id/button_8"
            android:textSize="30sp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_margin="1dp"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/nine"
            android:id="@+id/button_9"
            android:textSize="30sp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_margin="1dp"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/multipliedButton"
            android:id="@+id/button_multiplied"
            android:textSize="30sp"
            android:background="@drawable/rounded_corners_button"
            android:layout_margin="1dp"


            />


    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.15">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/four"
            android:id="@+id/button_4"
            android:textSize="30sp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_margin="1dp"


            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/five"
            android:id="@+id/button_5"
            android:textSize="30sp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_margin="1dp"


            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/six"
            android:id="@+id/button_6"
            android:textSize="30sp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_margin="1dp"


            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/minusButton"
            android:id="@+id/button_minus"
            android:textSize="30sp"
            android:background="@drawable/rounded_corners_button"
            android:layout_margin="1dp"



            />


    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.15">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/one"
            android:id="@+id/button_1"
            android:textSize="30sp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_margin="1dp"


            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/two"
            android:id="@+id/button_2"
            android:textSize="30sp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_margin="1dp"



            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/three"
            android:id="@+id/button_3"
            android:textSize="30sp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_margin="1dp"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/plusButton"
            android:id="@+id/button_plus"
            android:textSize="30sp"
            android:background="@drawable/rounded_corners_button"
            android:layout_margin="1dp"
            />





    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.15">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/zero"
            android:id="@+id/button_0"
            android:textSize="30sp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/point"
            android:textSize="30sp"
            android:background="@drawable/rounded_corners_button"
            android:layout_margin="1dp"
            android:id="@+id/button_point"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/allClearButton"
            android:id="@+id/button_allClear"
            android:textSize="30sp"
            android:background="@drawable/rounded_corners_button"
            android:layout_margin="1dp"
            />




        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/equalButton"
            android:id="@+id/button_equals"
            android:textSize="30sp"
            android:background="@drawable/rounded_corners_button"
            android:layout_margin="1dp"
            />


    </LinearLayout>



</LinearLayout>